--- a/searchpage/css/index.css
+++ b/searchpage/css/index.css
@@ -20,30 +20,17 @@ body, html{
     margin: 0px;
 }
 
-div#nav-div{
-    position: sticky;
-    background-color: rgba(255, 99, 71, .8);
-    top:0%;
-    height: 75px;
-    margin: 0px;
-    border: 1px black solid;
-    border-radius: 3px;
-    border-top:none;
-}
-
-div#header-div{
-    background-image: url("/images/images/globe-2.jpg");
-    background-color: rgba(50, 85, 115, 1);
-    background-blend-mode: hard-light;
-    background-position-y: 2000px;
-    background-position-x: -800px;
-    width: 100%;
-    height: 200px;
-    position: relative;
-    margin: 0%;
-    z-index: -1;
-    position: sticky;
-    border: solid black 2.5px;
+button.sort-critera{
+    position: absolute;
+    background-color:  rgba(255, 99, 71, 0.72);
+    width: 100px;
+    height: 30px;
+    border: solid black 1px;
+    border-radius: 20px;
+    color: black;
+    text-align: center;
+    top: 65%;
+    transform: translate(-50%, -50%);
 }
 
 button#nav-button{
@@ -59,88 +46,6 @@ button#nav-button{
 
 button#nav-button:hover{
     color: white;
-}
-
-h1#button-descr{
-    left: 9%;
-    top: 34%;
-    font-size: 20px;
-}
-
-h1#country-heading{
-    top: 20%;
-    left: 30%;
-    font-size: 40px;
-    border-top: solid black 1px;
-}
-
-input#search-button{
-    top: 50%;
-    left: 50%;
-    height: 30px;
-    width: 300px;
-    text-align: center;
-    border: solid black 1px;
-    border-radius: 10px;
-
-}
-
-h1#coupling-heading{
-    top: 20%;
-    left: 70%;
-    font-size: 40px;
-    border-bottom: solid black 1px;
-    padding-bottom: 0px;
-}
-
-.nav-class{
-    position: absolute;
-    transform: translate(-50%, -50%);
-
-}
-
-.header-div{
-    margin: 0%;
-    padding: 0%;
-    position: absolute;
-    transform: translate(-50%, -50%);
-
-}
-
-h1#header-header{
-    top: 25%;
-    left: 50%;
-}
-
-h2#country-amount{
-    top: 55%;
-    left: 50%;
-}
-
-h3#search-criteria{
-    top:85%;
-    left: 50%;
-}
-
-div#section-div{
-    position: relative;
-    height: 125px;
-    background-color: rgba(50, 85, 115, .95);
-    border-top: solid black 1px;
-    border-bottom: solid black .5px;
-}
-
-button.sort-critera{
-    position: absolute;
-    background-color:  rgba(255, 99, 71, 0.72);
-    width: 100px;
-    height: 30px;
-    border: solid black 1px;
-    border-radius: 20px;
-    color: black;
-    text-align: center;
-    top: 65%;
-    transform: translate(-50%, -50%);
 }
 
 button.sort-critera:hover{
@@ -173,17 +78,34 @@ button#name{
     left: 25%;
 }
 
-input#search{
-    position: relative;
-    left: 50%;
+button#a-z{
+    position: absolute;
+    left: 35%;
     transform: translate(-50%, -50%);
     top: 25%;
+    width: 150px;
     height: 30px;
-    width: 400px;
     border: solid black 1px;
     border-radius: 20px;
+    background-color:  rgba(255, 99, 71, .72);
+}
+
+button#a-z:hover{
+    background-color:  rgba(255, 99, 71, 1);
+}
+
+button#to-top{
+    background-color: rgba(255, 99, 71, 0.707);
     text-align: center;
- 
+    height: 35px;
+    width: 100%;
+    margin: 0px;
+    padding: 0%;
+    border: none;
+}
+
+button#to-top:hover{
+    color: white;
 }
 
 button#scroll-to-data{
@@ -200,7 +122,40 @@ button#scroll-to-data{
 
 button#scroll-to-data:hover{
     background-color:  rgba(255, 99, 71, 1);
+}
 
+div#nav-div{
+    position: sticky;
+    background-color: rgba(255, 99, 71, .8);
+    top:0%;
+    height: 75px;
+    margin: 0px;
+    border: 1px black solid;
+    border-radius: 3px;
+    border-top:none;
+}
+
+div#header-div{
+    background-image: url("/images/images/globe-2.jpg");
+    background-color: rgba(50, 85, 115, 1);
+    background-blend-mode: hard-light;
+    background-position-y: 2000px;
+    background-position-x: -800px;
+    width: 100%;
+    height: 200px;
+    position: relative;
+    margin: 0%;
+    z-index: -1;
+    position: sticky;
+    border: solid black 2.5px;
+}
+
+div#section-div{
+    position: relative;
+    height: 125px;
+    background-color: rgba(50, 85, 115, .95);
+    border-top: solid black 1px;
+    border-bottom: solid black .5px;
 }
 
 div#main-div{
@@ -210,22 +165,66 @@ div#main-div{
     min-height: 510px;
 }
 
-button#a-z{
-    position: absolute;
-    left: 35%;
-    transform: translate(-50%, -50%);
+div#footer-div{
+    position: relative;
+    background-color:rgb(50, 85, 115, 1);
+    height: 75px;
+    text-align: center;
+    border-top: black solid 1px;
+    border-radius: 3px;
+}
+
+div#figure-div{
+    position: relative;
+    margin: 0px;
+    padding: 0px;
+    background-color: rgb(50, 85, 115, .7);
+}
+
+figure{
+    
+    border: black solid 1px;
+    border-radius: 10px;
+    margin: 0px;
+    padding: 0px;
+}
+
+h1#button-descr{
+    left: 9%;
+    top: 34%;
+    font-size: 20px;
+}
+
+h1#country-heading{
+    top: 20%;
+    left: 30%;
+    font-size: 40px;
+    border-top: solid black 1px;
+}
+
+h1#coupling-heading{
+    top: 20%;
+    left: 70%;
+    font-size: 40px;
+    border-bottom: solid black 1px;
+    padding-bottom: 0px;
+}
+
+h1#header-header{
     top: 25%;
-    width: 150px;
-    height: 30px;
-    border: solid black 1px;
-    border-radius: 20px;
-    background-color:  rgba(255, 99, 71, .72);
+    left: 50%;
 }
 
-button#a-z:hover{
-    background-color:  rgba(255, 99, 71, 1);
-
+h2#country-amount{
+    top: 55%;
+    left: 50%;
 }
+
+h3#search-criteria{
+    top:85%;
+    left: 50%;
+}
+
 
 h1#header-header{
     font-size: 40px;
@@ -244,38 +243,44 @@ h3#search-criteria{
     padding: 5px 20px;
 }
 
-ul#main-list{
-    list-style-type: none;
-    text-align: center;
-    margin: 0px;
-    padding-left: 0px;
-
-    
-}
-
 h1#graph-heading{
     margin-top: 5%;
     text-align: center;
 }
 
-section#section-two {
-    height: 0px;
-    width: 0px;
+h1#slogan{
+    position: absolute;
+    text-decoration:overline;
+    text-decoration: underline;
+    left: 50%;
+    top: 50%;
+    font-size: 20px;
 }
 
-div#footer-div{
-    position: relative;
-    background-color:rgb(50, 85, 115, 1);
-    height: 75px;
+
+input#search-button{
+    top: 50%;
+    left: 50%;
+    height: 30px;
+    width: 300px;
     text-align: center;
-    border-top: black solid 1px;
-    border-radius: 3px;
+    border: solid black 1px;
+    border-radius: 10px;
+
 }
 
-ul#info-list{
-    list-style-type: none;
-    margin: 0%;
+input#search{
+    position: relative;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    top: 25%;
+    height: 30px;
+    width: 400px;
+    border: solid black 1px;
+    border-radius: 20px;
+    text-align: center;
 }
+
 li.info-block{
     display: inline-block;
     margin: 20px;
@@ -289,41 +294,35 @@ li.info-block:hover{
     background-color: rgba(255, 99, 71, 0.72);
 }
 
-figure{
-    
-    border: black solid 1px;
-    border-radius: 10px;
-    margin: 0px;
-    padding: 0px;
-}
-div#figure-div{
-    position: relative;
-    margin: 0px;
-    padding: 0px;
-    background-color: rgb(50, 85, 115, .7);
+section#section-two {
+    height: 0px;
+    width: 0px;
 }
 
-h1#slogan{
-    position: absolute;
-    text-decoration:overline;
-    text-decoration: underline;
-    left: 50%;
-    top: 50%;
-    font-size: 20px;
-}
-
-button#to-top{
-    background-color: rgba(255, 99, 71, 0.707);
+ul#main-list{
+    list-style-type: none;
     text-align: center;
-    height: 35px;
-    width: 100%;
     margin: 0px;
-    padding: 0%;
-    border: none;
+    padding-left: 0px;
 }
 
-button#to-top:hover{
-    color: white;
+
+ul#info-list{
+    list-style-type: none;
+    margin: 0%;
+}
+
+.nav-class{
+    position: absolute;
+    transform: translate(-50%, -50%);
+
+}
+
+.header-div{
+    margin: 0%;
+    padding: 0%;
+    position: absolute;
+    transform: translate(-50%, -50%);
 
 }
 
@@ -340,8 +339,6 @@ button#to-top:hover{
     button#button-descr{
         left: 40%;
     }
-    
-    
 }
 
 @media screen and (max-width: 948px){
@@ -387,5 +384,62 @@ button#to-top:hover{
 @media screen and (max-width: 948px){
     div#footer-div{
         height: 175px ;
+    }
+}
+
+@media screen and (max-width: 1084px){
+    h1#button-descr{
+        font-size: 15px;
+        left: 12%
+    }
+    h1#slogan{
+        font-size: 15px;
+    }
+    h1#country-heading{
+        font-size: 15px;
+    }
+    h1#country-heading{
+        font-size: 15px;
+    }
+    h1#coupling-heading{
+        font-size: 15px;
+    }
+    h1#button-descr{
+        left: 16%;
+        top: 40%;
+        font-size: 12px;
+    }
+    a#home-link{
+        font-size: 12px;
+    }
+}
+
+
+@media screen and (max-width: 1680px){
+    h1#button-descr{
+        left: 16%
+    }
+}
+
+@media screen and (max-width: 739px) {
+    h1#header-header{
+        font-size: 28px;
+        text-align: center;
+    }
+
+    h2#country-amount{
+        font-size: 18px;
+        text-align: center;
+    }
+
+    h3#search-criteria{
+        font-size: 15px;
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 1919px){
+    table#figure-table{
+        width: 70% ;
     }
 }
